--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "NYTScrubber",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.12.0"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -23,6 +26,7 @@
     "axios": "^0.16.2",
     "express": "^4.16.3",
     "mongoose": "^5.0.17",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    
   }
 }
