--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "NYTScrubber",
   "version": "1.0.0",
   "engines": {
-    "node": "8.12.0"
+    "node": "10.11.0"
   },
   "description": "",
   "main": "server.js",
@@ -26,7 +26,8 @@
     "axios": "^0.16.2",
     "express": "^4.16.3",
     "mongoose": "^5.0.17",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "npm": "6.4.1"
     
   }
 }
