--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.16.2"
   },
   "scripts": {
-    "start": "yarn start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
