--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "author": "",
+  "author": "Megan Anthony",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^3.5.0",
@@ -26,7 +26,7 @@
     "axios": "^0.16.2",
     "express": "^4.16.3",
     "mongoose": "^5.0.17",
-    "if-env": "^1.0.4",
-    "npm": "6.4.1"
+    "if-env": "^1.0.4"
+    
   }
 }
