--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.0.17",
+    "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.6.3",
     "react-particles-js": "^2.3.0"
   }
 }
